--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ body {
 .contacts-footer {
 	color: var(--footer-text-color);
 	font-size: 14px;
-	line-height: 24px;
+	line-height: 1.7;
 	letter-spacing: 0.03em;
 }
 /* portfolio.html */
@@ -177,7 +177,7 @@ body {
 	color: var(--black-text-color);
 	font-weight: 700;
 	font-size: 18px;
-	line-height: 36px;
+	line-height: 2;
 	letter-spacing: 0.06em;
 }
 .portfolio-text {
